navbar alignments fixed

--- a/static/assets/css/master.css
+++ b/static/assets/css/master.css
@@ -3610,7 +3610,9 @@ label {
 .cs_site_branding img {
     max-height: 45px;
 }
-
+.cs_toolbox{
+    display:none !important;
+}
 @media screen and (min-width: 1200px) {
     .cs_nav_list.cs_color_1 {
         color: #fff;
@@ -8503,7 +8505,7 @@ select {
         text-align: justify !important;
     }
     .sub-heading-text{
-        font-size: 22px !important;
+        font-size: 20px !important;
     }
     .cs_about.cs_style_1 .cs_about_bg {
         position: absolute;
